--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -23,7 +23,7 @@
 .counter_digit {
     font-size: 32px;
     font-weight: 600;
-    color: #000 !important;
+    color: #fff !important;
     margin-bottom: 0px;
     text-align: center;
 }.col_20{
