--- a/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
+++ b/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
@@ -13,10 +13,10 @@
                       class="form-control ng-untouched ng-pristine ng-valid form_width"
                       ng-reflect-name="search" />
               </div>
-                <button *ngIf="isSuperAdmin" (click)="addEmployee()" class="btn btn-primary"> 
+          <!--       <button *ngIf="isSuperAdmin" (click)="addEmployee()" class="btn btn-primary"> 
                     <img src="../../../../../assets/icons/group.png" class="side_imgmaster mr-1">
-                    <span class="fon_14">Add Employee</span></button>
-                    </div>
+                    <span class="fon_14">Add Employee</span></button>-->
+                    </div> 
              
               </div>
             </div>
