--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -25,7 +25,7 @@
           </div>
           <div class="sing_out_button">
             <img src="../../../../assets/icons/padlock.png" class="pass_change">
-            <a>Change Password</a>
+            <a routerLink="/change">Change Password</a>
           </div>
       
        </div>
