--- a/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
+++ b/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
@@ -28,9 +28,9 @@
                     <tr class="tbody_data" *ngFor="let item of actionPlanList ;let i =index">
                         <td>{{item.item}}</td>  
                         <td>{{item.subItem}}</td>
-                        <td>{{item.remark}}</td>
-                        <td>{{item.detailOfImprovement}}</td>
-                        <td>{{item.incharge}}</td>
+                        <td><p class="w-170 show1">{{item.remark}}</p></td>
+                        <td><p class="w-170 show1">{{item.detailOfImprovement}}</p></td>
+                        <td><p class="w-170 show1">{{item.incharge}}</p></td>
                         <td>{{item.dateOfSubmission | date:dateFormat}}</td> 
                         <td>
                            <textarea [(ngModel)]="item.remarkOfAuditor" class="form-control width-300" placeholder="Enter your Remarks"></textarea>
