--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,6 +23,58 @@
             </div>
           </div>
         </div>
+          <div class="container-fluid mt-4 mb-4" *ngIf="isVendor">
+            <div class="d-flex justify-content-center mb-2 flex_direction_media">
+              <a class="child_counter gradien_plan">
+                <div class="">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <img src="../../../../assets/icons/counter/shield.png" class="counter_img">
+                    <p class="color_white mb-0 fon_13">Total Plan</p>
+                  </div>
+                  <div>
+                    <p class="counter_digit">12</p>
+                    <a></a>
+                  </div>
+                </div>
+              </a>
+              <a class="child_counter gradien_approve">
+                <div class="">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <img src="../../../../assets/icons/counter/approve.png" class="counter_img">
+                    <p class="color_white mb-0 fon_13">Approve Task</p>
+                  </div>
+                  <div>
+                    <p class="counter_digit">5</p>
+                    <a></a>
+                  </div>
+                </div>
+              </a>
+              <a class="child_counter gradien_pending">
+                <div class="">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <img src="../../../../assets/icons/counter/pending.png" class="counter_img">
+                    <p class="color_white mb-0 fon_13">Pending Plan</p>
+                  </div>
+                  <div>
+                    <p class="counter_digit">4</p>
+                    <a></a>
+                  </div>
+                </div>
+              </a>
+              <a class="child_counter gradien_auditor_assign">
+                <div class="">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <img src="../../../../assets/icons/counter/auditor.png" class="counter_img">
+                    <p class="color_white mb-0 fon_13">Auditor Assign</p>
+                  </div>
+                  <div>
+                    <p class="counter_digit">3</p>
+                    <a></a>
+                  </div>
+                </div>
+              </a>
+            </div>
+            </div>
       </div>
     </div>
   </div>
