--- a/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
+++ b/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
@@ -26,38 +26,29 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tbody_data"
-                        *ngFor="let item of actionPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
-                        <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>
-                        <td>
-                            <p class="show1">{{item.auditArea}}</p>
-                        </td>
-                        <td>
-                            <p class="show1">{{item.regulationText}}</p>
-                        </td>
+                    <tr class="tbody_data" *ngFor="let item of actionPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                        <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>    
+                        <td><p class="show1">{{item.auditArea}}</p></td>
+                        <td><p class="show1">{{item.regulationText}}</p></td>
                         <td>{{item.remark}}</td>
                         <td>{{item.detailOfImprovement}}</td>
                         <td>{{item.incharge}}</td>
                         <td>{{item.dateOfSubmission | date:dateFormat}}</td>
                         <td style="padding: 7px;">
-                            <div *ngIf="item.closureStatus == ''">
-                                <div style="display: flex;"
-                                    *ngFor="let attach of item.attachment.split('|'); let indexOfelement=index">
+                            <div *ngIf="item.closureStatus != 'Closed' && item.attachment.length == 0">
+                                <div style="display: flex;" *ngFor="let attach of item.activeAttachments?.split('|'); let indexOfelement=index">
                                     <input type="file" id="exampleInputFile" file="item" style="margin-top: 10px;"
-                                        (change)="fileUpload($event, item.id, indexOfelement)"
-                                        class="form-control inputbox_css-date" multiple>
-                                    <button (click)="removeFile(item, indexOfelement)"
-                                        style="margin-left: 8px; height: 30px; margin-top: 12px;"
+                                        (change)="fileUpload($event, item.id, indexOfelement)" class="form-control inputbox_css-date" multiple>
+                                    <button *ngIf="indexOfelement > 0" (click)="removeFile(item, indexOfelement)" style="margin-left: 8px; height: 30px; margin-top: 12px;"
                                         class="btn btn-danger btn-add-deatil">-</button>
                                 </div>
-
-                                <input *ngIf="item.attachment.split('|').length == 0" type="file" id="exampleInputFile"
-                                    (change)="fileUpload($event, item.id, 0)" class="form-control inputbox_css-date"
-                                    multiple>
-
+                        
+                                <input *ngIf="!(item.activeAttachments?.split('|').length > 0)" type="file" id="exampleInputFile"
+                                    (change)="fileUpload($event, item.id, 0)" class="form-control inputbox_css-date" multiple>
+                        
                                 <button class="btn btn-primary btn-add-deatil mr-1"
-                                    style="height: 30px; margin-top: 10px;"
-                                    *ngIf="item.attachment.split('|').length < 7" (click)="addFile(item)">+</button>
+                                    style="height: 30px; margin-top: 10px;" *ngIf="item.activeAttachments?.split('|').length < 7"
+                                    (click)="addFile(item)">+</button>
                             </div>
                         </td>
                         <td>{{item.closureStatus}}</td>
@@ -65,19 +56,19 @@
                             <p class="show1">{{item.observationActionRemark}}</p>
                         </td>
                         <td>
-                            <div *ngIf="item.closureStatus == ''">
+                            <div *ngIf="item.closureStatus != 'Closed' && item.attachment.length == 0">
                                 <button class="btn btn-success" (click)="submit(item)">Submit</button>
                             </div>
                         </td>
-                    </tr>
-                </tbody>
+                        </tr>
+                        </tbody>
             </table>
         </div>
         <nav aria-label="Page navigation example">
             <div class="pagination justift_end">
-                <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
             </div>
-        </nav>
+          </nav>
     </div>
     <div class="card-footer">
         <button class="btn btn-default" (click)="back()">Back</button>
