--- a/src/app/dashboard/audit-plan/create-plan/upload-plan/upload-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/upload-plan/upload-plan.component.html
@@ -10,7 +10,7 @@
         <div class="col-sm-12">
             <div class="form-group">
               <label>Choose File</label>
-              <input class="form-control" type="file" name="myfile" />
+              <input class="form-control" (change)="bulkUpload($event)" type="file" name="myfile" />
             </div>
             </div>
           </div>
