--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -64,7 +64,7 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="!isViewOnly">
             <a class="nav-link active-sidebar">
               <img src="../../assets/icons/management.png" class="side_img">
               <p>
