set password, not available judgement

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -8,22 +8,22 @@
     <img src="../../assets/img/maruti-logo.png" class="w_300" /> 
     <h4 class="primary-title mb-4 mt-4">Change Password</h4>
     </div>
-    <form>
+    <form [formGroup]="setPasswordForm">
     <div class="input_data">
       <div class="form-group">
-        <label for="exampleInputEmail1" class="text_black">User Name</label>
-        <input type="Text" class="form-control inputbox_css" placeholder="Enter User Name"
+        <label for="exampleInputEmail1" class="text_black">Current Password</label>
+        <input type="password" class="form-control inputbox_css" formControlName="password" placeholder="Enter Current Password"
        >
       </div>
       <div class="form-group">
-        <label for="exampleInputEmail1" class="text_black">Password</label>
-        <input type="password" class="form-control inputbox_css"  placeholder="********"
+        <label for="exampleInputEmail1" class="text_black">New Password</label>
+        <input type="password" class="form-control inputbox_css"  formControlName="password" placeholder="Enter New Password"
        >
       </div>
     </div><!--inpiu-->
     <div class="btn_div">
 
-      <button type="submit"  class="btn btn-blue">Change password</button>
+      <button type="submit" (click)="submit()" class="btn btn-blue">Change password</button>
       <button type="button" routerLink="/login"  class="btn btn-blue">Login</button>
     </div>
     
