--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
@@ -49,7 +49,7 @@
                                   <div class="d-flex">
                                    
                                     <div class="mr-3">
-                                      <input type="radio"  formControlName="JudgementId"   [value]="pie"
+                                      <input type="radio"  formControlName="JudgementId"   [value]="pie" (click)="getPie($event)"
                                         class="chek_box"><img src="../../../../assets/icons/square.png"
                                         class="diacisq_css">
                                     </div>
@@ -62,6 +62,9 @@
                                     <div class="mr-3">
                                       <input type="radio" formControlName="JudgementId"   [value]="cross" class="chek_box"><img
                                         src="../../../../assets/icons/new-moon.png" class="diacisq_css">
+                                    </div>
+                                    <div class="mr-3">
+                                      <input type="radio" formControlName="JudgementId"   [value]="na" class="chek_box"><b>N/A</b>
                                     </div>
                                       </div>
                                 </div>
