evidence download, view plan list

--- a/src/app/dashboard/evidence/add-section-head-remarks/add-section-head-remarks.component.html
+++ b/src/app/dashboard/evidence/add-section-head-remarks/add-section-head-remarks.component.html
@@ -11,7 +11,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div class="table-responsive max_hei_table">
+                        <div class="table-responsive max_hei_table-600">
                             <table class="table table-bordered table-hover">
                               <thead class="bac_table_white">
                                 <tr class="now_rap text-center sticky_header">
