--- a/src/app/dashboard/masters/audit-area/audit-area-edit/audit-area-edit.component.html
+++ b/src/app/dashboard/masters/audit-area/audit-area-edit/audit-area-edit.component.html
@@ -4,14 +4,14 @@
             <div class="col-md-12">
                 <div class="card card-default">
                     <div class="card-header">
-                        <h3 class="card-title">Audit Area Details</h3>
+                        <h3 class="card-title">Clause Details</h3>
                     </div>
                     <form [formGroup]="auditAreaForm">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <label class="form_label">Audit Area Name</label>
+                                        <label class="form_label">Clause Name</label>
                                         <input type="text" class="form-control inputbox_css"
                                             placeholder="Enter Audit Area Name" formControlName="name" maxlength="200">
                                     </div>
