--- a/src/app/dashboard/masters/regulation/regulation-edit/regulation-edit.component.html
+++ b/src/app/dashboard/masters/regulation/regulation-edit/regulation-edit.component.html
@@ -33,7 +33,7 @@
                       </div>
                       <div class="col-sm-4">
                         <div class="form-group">
-                          <label class="form_label">Audit Area</label>
+                          <label class="form_label">Clause</label>
                           <select class="form-control" formControlName="auditAreaId">
                             <option *ngFor="let item of auditAreaObj" [value]="item.id">{{item.name}}</option>
                           </select>
