--- a/src/app/dashboard/masters/regulation/regulation-list/regulation-list.component.html
+++ b/src/app/dashboard/masters/regulation/regulation-list/regulation-list.component.html
@@ -15,9 +15,9 @@
                   <thead>
                     <tr class="sticky_header">
                       <th>S.No</th>
-                      <th>Regulation Name </th>
+                      <th>Check Point Name </th>
                       <th>Categories</th>
-                      <th>Audit Area</th>
+                      <th>Clause</th>
                       <th>Regulation Creation Date</th>
                       <th *ngIf="isSuperAdmin">Action</th>
                     </tr>
