--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -135,7 +135,8 @@
                     <td *ngIf="isSuperAdmin" >
                       <div *ngIf="isSuperAdmin && (item.status == Accepted) && (item.typeOfReport != Final)"> <a
                           (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img
-                            src="../../../../assets/icons/audit.png" class="viwe_iamge"></a> </div>
+                            src="../../../../assets/icons/audit.png" class="viwe_iamge"></a> 
+                      </div>
                     </td>
                      <td>
                       <p class="show1">{{item.auditorName}}</p>
@@ -156,6 +157,7 @@
                     <td> <button (click)="openModal(item)" class="mr-1 Auditor-log btn btn-secondary">
                         <span>Audit Log</span></button>
                         <a *ngIf="item.status =='Rejected'" (click)="editPlan(item)"><img src="../../../../../assets/icons/document-editor.png" class="w_25"></a>
+                        <a *ngIf="(isSuperAdmin || isPlanner) && !item.auditorName" (click)="delete(item.id)"><img src="../../../../../assets/icons/delete.png" class="w_25"></a>
                       </td>
                   </tr>
                 </tbody>
